@@ -38,10 +38,10 @@ class LanguagesController extends JController
 	{
 		require_once JPATH_COMPONENT.'/helpers/languages.php';
 
-		parent::display();
-
 		// Load the submenu.
 		LanguagesHelper::addSubmenu(JRequest::getWord('view', 'installed'));
+
+		parent::display();
 
 		return $this;
 	}
